update: adding new helper file with(AdminEnviroment.php) composer.json service

--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
     },
     "autoload-dev": {
         "files": [
-           "app/Helpers/Helper.php"
+            "app/Helpers/Helper.php",
+            "app/Helpers/AdminEnvironment.php"
         ],
         "psr-4": {
             "Tests\\": "tests/"
