--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "type": "project",
     "require": {
         "php": "^7.2",
-        "vlucas/phpdotenv": "^2.2"
+        "vlucas/phpdotenv": "^2.2",
+        "phpmailer/phpmailer": "dev-master"
     },
     "authors": [
         {
